--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 				<div class="col-md-12 text-center st-header-content">
 					<div class="logo"><a href=""><img src="images/logo.png" alt=""></a></div>
 					<div class="st-header-title">
-						<h2>Welcome <span>The Cloud World</span></h2>
-						<p>Welcome to The Cloud World <br /> - By Wilshan </p>
+						<h2>Welcome <span>The My World</span></h2>
+						<p>Welcome to My World <br /> - By Sonu & Guddi </p>
 					</div>
 				</div>
 			</div>
